fixed some ts issues in styling for genhighlight and the button of the navweb on mobile screen

--- a/hfnfrontendv2/styles/globals.css
+++ b/hfnfrontendv2/styles/globals.css
@@ -9,11 +9,6 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
-
-.highlightimg {
-  border-radius: 1rem;
-}
-
 .highlightimg::after {
   content: '';
   height: 100%;
@@ -25,7 +20,17 @@ body {
   bottom: 0;
   background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.808) 60%);
   z-index: 2;
-  border-radius: 1rem;
+}
+
+
+@media (min-width: 768px) {
+  .highlightimg {
+    border-radius: 1rem;
+  }
+
+  .highlightimg::after {
+    border-radius: 1rem;
+  }
 }
 
 .highlightimg {
